<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <CheckBox
                android:text="@string/js"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/cb_js"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/cb_java"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toStartOf="@+id/cb_goland" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@+id/txt_nacimiento3"/>
        <CheckBox
                android:text="@string/go_land"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/cb_goland"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/cb_python"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cb_js" app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/le_gusta_programar"
                android:layout_width="0dp"
                android:layout_height="40dp" android:id="@+id/txt_question"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/txt_nacimiento"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/radioGroup"
                android:layout_marginEnd="8dp"/>


        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="66dp"
                app:layout_constraintStart_toEndOf="@+id/txt_question"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/datePickerButton" android:layout_marginStart="16dp"
                android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginEnd="16dp" android:checkedButton="@id/rb_yes"
                android:orientation="horizontal"
                android:gravity="center">

            <RadioButton
                    android:text="@string/si"
                    android:layout_width="79dp"
                    android:layout_height="48dp" android:id="@+id/rb_yes"
            />
            <RadioButton
                    android:text="@string/no"
                    android:layout_width="74dp"
                    android:layout_height="48dp" android:id="@+id/rb_no"
            />
        </RadioGroup>
        <CheckBox
                android:text="@string/java"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/cb_java"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintStart_toEndOf="@+id/txt_nacimiento3"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/cb_python"
                android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:layout_marginTop="28dp"/>
        <CheckBox
                android:text="@string/python"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/cb_python"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/cb_java"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                android:layout_marginStart="16dp" android:layout_marginTop="28dp"/>
        <TextView
                android:text="@string/lenguaje"
                android:layout_width="0dp"
                android:layout_height="34dp" android:id="@+id/txt_nacimiento3"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                android:layout_marginTop="51dp" app:layout_constraintTop_toBottomOf="@+id/txt_question"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/cb_java"
                android:layout_marginEnd="16dp"/>
        <CheckBox
                android:text="@string/c_c"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/cb_cplus"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/cb_csharp" app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/cb_goland"
                android:layout_marginStart="16dp" android:layout_marginBottom="48dp"
                app:layout_constraintBottom_toTopOf="@+id/bt_clean"/>
        <CheckBox
                android:text="@string/c"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/cb_csharp"
                android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/cb_cplus" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cb_js"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/txt_nacimiento3"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_lastname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                android:hint="@string/digite_un_apellido" android:autofillHints="" android:textColorHint="#757575"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_name"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:inputType="textLongMessage|textPersonName"
                android:ems="10"
                android:id="@+id/txt_name"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.481"
                android:hint="@string/digite_un_nombre" android:autofillHints="" android:textColorHint="#757575"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/g_nero"
                android:layout_width="0dp"
                android:layout_height="32dp" android:id="@+id/textView"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_lastname" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/sp_gender"
                android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.5"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/sp_gender"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/app_name"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_lastname" android:spinnerMode="dropdown"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/nacimiento"
                android:layout_width="0dp"
                android:layout_height="34dp" android:id="@+id/txt_nacimiento"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/datePickerButton"/>
        <Button
                android:text="@string/enviar"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/bt_send"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@+id/cb_csharp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/bt_clean"
                android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintVertical_bias="0.977"/>
        <Button
                android:text="@string/limpiar"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/bt_clean"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/cb_csharp"
                app:layout_constraintStart_toEndOf="@+id/bt_send" app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginStart="16dp"/>
        <Button
                android:id="@+id/datePickerButton"
                android:layout_width="192dp"
                android:layout_height="51dp"
                android:text="@string/jan_01_2020"
                android:textSize="16sp"
                android:textColor="@color/black"
                style="?android:spinnerStyle"
                android:onClick="openDatePicker" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txt_nacimiento" android:layout_marginStart="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/sp_gender"
                android:layout_marginEnd="16dp"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content" android:id="@+id/guideline2"
                                                    app:layout_constraintGuide_begin="20dp"
                                                    android:orientation="vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>